Some whitespace fixing.

--- a/hurricaine/src/Components/Searchbar.css
+++ b/hurricaine/src/Components/Searchbar.css
@@ -47,13 +47,15 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-#Scroller::-webkit-scrollbar {
+#Scroller::-webkit-scrollbar 
+{
     color:blue;
     display: none;
-  }
+}
   
   /* Hide scrollbar for IE, Edge and Firefox */
-#Scroller {
+#Scroller 
+{
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-  }
+}
